# kronos

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tox.ini
etc/kronos/: kronos.conf.sample  policies.yaml.sample
kronos/: __init__.py  version.py
kronos/clients/: CLAUDE.md  nova.py  prometheus.py
kronos/cmd/: engine.py  test_config.py
kronos/common/: config.py  exceptions.py
kronos/engine/: CLAUDE.md  loop.py  scorer.py  types.py
kronos/policies/: CLAUDE.md  loader.py  models.py
tests/: conftest.py
tests/fixtures/: policies_invalid.yaml  policies_valid.yaml
tests/fixtures/prometheus_responses/: healthy.json  partial.json  stale.json
tests/unit/clients/: test_nova.py  test_prometheus.py
tests/unit/engine/: test_loop.py  test_scorer.py
tests/unit/policies/: test_loader.py  test_models.py
